# mcp4bas

./: .env.example  .gitignore  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
src/mcp4bas/: __init__.py  server.py
src/mcp4bas/bacnet/: __init__.py  connector.py
src/mcp4bas/haystack/: __init__.py  connector.py
src/mcp4bas/modbus/: __init__.py  connector.py
src/mcp4bas/mqtt/: __init__.py  connector.py
src/mcp4bas/prompts/: __init__.py  airside_fault_diagnostics.md  comfort_diagnostics.md  energy_diagnostics.md
src/mcp4bas/resources/: __init__.py  equipment_summary.json  haystack_points.json  mqtt_messages.json  snmp_dataset.json  trend_summary.json
src/mcp4bas/snmp/: __init__.py  connector.py
src/mcp4bas/tools/: __init__.py  core.py
tests/: test_assets.py  test_bacnet_connector.py  test_haystack_connector.py  test_integration_adapters.py  test_modbus_connector.py  test_mqtt_connector.py  test_mqtt_integration_fixtures.py  test_server.py  test_snmp_connector.py
tests/fixtures/: mqtt_good_bad_payloads.json
