[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp4bas"
version = "0.1.0"
description = "Model Context Protocol server for Building Automation Systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Chris Favre" }
]
dependencies = [
  "mcp[cli]>=1.26.0",
  "bacpypes3>=0.0.98",
  "pymodbus>=3.8.0",
  "pydantic>=2.9.0"
]

[project.optional-dependencies]
bacnet = ["bacpypes3>=0.0.98"]
modbus = ["pymodbus>=3.8.0"]
mqtt = ["paho-mqtt>=2.1.0"]
dashboard = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0"
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[project.scripts]
mcp4bas = "mcp4bas.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp4bas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
check_untyped_defs = false
no_implicit_optional = true
