[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp4bas"
version = "0.2.0"
description = "MCP4BAS orchestrator — routes building automation tool calls to specialist sibling MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Chris Favre" }
]
dependencies = [
  "mcp[cli]>=1.26.0",
  "pydantic>=2.9.0"
]

[project.optional-dependencies]
monitoring = ["netifaces>=0.11.0"]
bacnet = ["bacpypes3>=0.0.100"]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[project.scripts]
mcp4bas = "mcp4bas.server:main"
mcp4bacnet = "mcp4bacnet.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp4bas", "src/mcp4bacnet"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
check_untyped_defs = false
no_implicit_optional = true
